--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neon Brick</title>
+    <title>Neon Black Sheep</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Neon Brick</h1>
+        <h1>[under construction]</h1>
     </header>
     <main>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id libero ut lorem vehicula pellentesque.</p>
+        <p>Lorem ipsum or something, blah blah blah.</p>
     </main>
     <footer>
-        <p>&copy; 2025 Neon Brick. All rights reserved.</p>
+        <p>&copy; 2025 Neon Black Sheep. All rights reserved.</p>
     </footer>
 </body>
 </html>
