Initial structure for design portfolio: index.html

--- a/index.html
+++ b/index.html
@@ -3,18 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neon Black Sheep</title>
+    <title>NEON BLACK SHEEP</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>[under construction]</h1>
+        <h1>NEON BLACK SHEEP</h1>
+        <p>(print / identity / signal work)</p>
+        <small>// clarity in ink and paper</small>
     </header>
     <main>
-        <p>Lorem ipsum or something, blah blah blah.</p>
+        <section id="services">
+            <h2>Services</h2>
+            <ul>
+                <li>(We design) logos / business cards / stationery</li>
+                <li>(We shape) product labels / packaging</li>
+                <li>(We build) social ads + profile visuals</li>
+                <li>(Deliverable = print-ready, precise, lasting)</li>
+            </ul>
+        </section>
+        <section id="portfolio">
+            <h2>Portfolio</h2>
+            <p>Grid of project previews coming soon.</p>
+        </section>
+        <section id="about">
+            <h2>About / Ethos</h2>
+            <p>(Work that holds in your hand)</p>
+            <p>Paper speaks / type anchors / color signals</p>
+            <p>(The sheep = outside the flock.)</p>
+        </section>
+        <section id="process">
+            <h2>Process</h2>
+            <p>01 brief // 02 design // 03 refine // 04 deliver</p>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Talk to us. (signal received)</p>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name">
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email">
+
+                <button type="submit">Send</button>
+            </form>
+        </section>
     </main>
     <footer>
-        <p>&copy; 2025 Neon Black Sheep. All rights reserved.</p>
+        <p>&copy; 2025 NEON BLACK SHEEP. All rights reserved.</p>
     </footer>
 </body>
 </html>
